<?xml version="1.0" encoding="utf-8"?>
<!-- 
Programmer: David Charles
Class ID: dcharl1678
Lab #04
CIS 2610: Business Mobile Programming
Fall 2013
Due date: 11/26/13
Date completed: 11/25/13
*************************************
BookItCheap is a travel agency 
We guarantee the best prices!
Book your trips safe and easy with this app
It has 6 classes
MainActivity
Tab1:Displays an image as a background and talks about BookItCheap
Tab2:Lets the user choose a destination among 6 and a from and to Date
Tab3:Shows a Gridview Image Gallery with the destinations pictures
Tab4:Goes to a website that talks about these destinations 
Tab5:Lets the user enter a location and a destination to book a flight

This activity uses a relative layout
Textviews fromtv and totv 
EditText fromet users needs to enter from location
EditText toet users needs to enter to location
Linear Layout
	Buttons btnFlightDate and btnbookFlight one to choose the date other to actually book it as a final action
TextView titletv to show the booking results
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue" >

    <TextView
        android:id="@+id/Fromtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92dp"
        android:text="@string/from"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/fromet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Fromtv"
        android:layout_alignBottom="@+id/Fromtv"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/Fromtv"
        android:ems="10"
        android:hint="@string/hintFrom" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/totv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fromet"
        android:layout_marginTop="72dp"
        android:text="@string/to"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/toet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totv"
        android:layout_alignBottom="@+id/totv"
        android:layout_alignLeft="@+id/fromet"
        android:ems="10"
        android:hint="@string/hintTo" />

    <TextView
        android:id="@+id/resultstv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:gravity="center_horizontal"
        android:text="@string/resultFlight"
        android:textColor="@color/Orange" />

    <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
    android:layout_below="@+id/toet"
    >
        	<Button 
        	android:id="@+id/btnFlightDate"
			android:text="@string/dateFlight"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>
		</Button>
		<Button  
		    android:id="@+id/btnbookFlight"
		    android:text="@string/bookFlight"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
			>
		</Button>
</LinearLayout>

    <TextView
        android:id="@+id/titletv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/flightTitle"
        android:textColor="@color/Black"
        android:textSize="@dimen/FlightTitle" />

</RelativeLayout>
